<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                               xmlns:app="http://schemas.android.com/apk/res-auto"
                                               android:layout_width="match_parent"
                                               android:layout_height="match_parent"
                                               android:background="@drawable/bg">

    <com.droid.views.TitleBar
        android:id="@+id/title_bar_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="false"
        android:src="@drawable/hks_logo"
        app:layout_heightPercent="60%"
        app:layout_marginBottomPercent="1%"
        app:layout_marginLeftPercent="4%"
        app:layout_marginRightPercent="1%"
        app:layout_marginTopPercent="10%"
        app:layout_widthPercent="30%"/>

    <ImageView
        android:id="@+id/image_view_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_below="@id/image_view_logo"
        android:background="#ffffff"
        app:layout_marginBottomPercent="10%"
        app:layout_marginLeftPercent="5%"
        app:layout_marginRightPercent="1%"
        app:layout_marginTopPercent="1%"
        app:layout_widthPercent="89%"/>

    <ImageButton
        android:id="@+id/image_button_related_video1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/image_view_logo"
        android:background="@drawable/sel_focus"
        android:focusable="true"
        android:scaleType="fitXY"
        android:src="@drawable/local_cate"
        app:layout_heightPercent="40%"
        app:layout_marginBottomPercent="3%"
        app:layout_marginLeftPercent="4%"
        app:layout_marginRightPercent="2%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="20%"/>

    <ImageButton
        android:id="@+id/image_button_related_video2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/image_view_logo"
        android:layout_toRightOf="@id/image_button_related_video1"
        android:background="@drawable/sel_focus"
        android:focusable="true"
        android:scaleType="fitXY"
        android:src="@drawable/local_weather"
        app:layout_heightPercent="40%"
        app:layout_marginBottomPercent="3%"
        app:layout_marginLeftPercent="2%"
        app:layout_marginRightPercent="2%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="20%"/>

    <ImageButton
        android:id="@+id/image_button_related_video3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/image_view_logo"
        android:layout_toRightOf="@id/image_button_related_video2"
        android:background="@drawable/sel_focus"
        android:focusable="true"
        android:scaleType="fitXY"
        android:src="@drawable/local_news"
        app:layout_heightPercent="40%"
        app:layout_marginBottomPercent="3%"
        app:layout_marginLeftPercent="2%"
        app:layout_marginRightPercent="2%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="20%"/>

    <ImageButton
        android:id="@+id/image_button_related_video4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/image_view_logo"
        android:layout_toRightOf="@id/image_button_related_video3"
        android:background="@drawable/sel_focus"
        android:focusable="true"
        android:scaleType="fitXY"
        android:src="@drawable/local_app_store"
        app:layout_heightPercent="40%"
        app:layout_marginBottomPercent="3%"
        app:layout_marginLeftPercent="2%"
        app:layout_marginRightPercent="1%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="20%"/>

    <ImageView
        android:id="@+id/image_view_related_video"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@id/image_button_related_video4"
        android:layout_alignRight="@id/image_button_related_video4"
        android:src="@drawable/item_all"
        app:layout_heightPercent="10%"
        app:layout_marginBottomPercent="1%"
        app:layout_marginLeftPercent="1%"
        app:layout_marginRightPercent="1%"
        app:layout_marginTopPercent="1%"
        app:layout_widthPercent="15%"/>

    <TextView
        android:id="@+id/text_view_director"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_toRightOf="@id/image_view_logo"
        android:text="@string/detail_view_director"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_heightPercent="8%"
        app:layout_marginBottomPercent="1%"
        app:layout_marginLeftPercent="5%"
        app:layout_marginRightPercent="1%"
        app:layout_marginTopPercent="15%"
        app:layout_widthPercent="100%"/>

    <TextView
        android:id="@+id/text_view_actor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/text_view_director"
        android:layout_toRightOf="@id/image_view_logo"
        android:text="@string/detail_view_actor"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_heightPercent="8%"
        app:layout_marginBottomPercent="1%"
        app:layout_marginLeftPercent="5%"
        app:layout_marginRightPercent="1%"
        app:layout_marginTopPercent="1%"
        app:layout_widthPercent="100%"/>

    <TextView
        android:id="@+id/text_view_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/text_view_actor"
        android:layout_toRightOf="@id/image_view_logo"
        android:text="@string/detail_view_content"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_heightPercent="20%"
        app:layout_marginBottomPercent="1%"
        app:layout_marginLeftPercent="5%"
        app:layout_marginRightPercent="1%"
        app:layout_marginTopPercent="1%"
        app:layout_widthPercent="100%"/>

    <ImageButton
        android:id="@+id/image_button_play"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@id/image_view_divider"
        android:layout_toRightOf="@id/image_view_logo"
        android:background="@drawable/sel_focus"
        android:focusable="true"
        android:scaleType="fitXY"
        android:src="@drawable/uamp_ic_play_arrow_white_48dp"
        app:layout_heightPercent="10%"
        app:layout_marginBottomPercent="1%"
        app:layout_marginLeftPercent="5%"
        app:layout_marginRightPercent="0%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="8%"/>

    <TextView
        android:id="@+id/text_view_play"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@id/image_view_divider"
        android:layout_below="@id/text_view_content"
        android:layout_toRightOf="@id/image_button_play"
        android:text="@string/detail_view_play_text"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_heightPercent="5%"
        app:layout_marginBottomPercent="1%"
        app:layout_marginLeftPercent="0%"
        app:layout_marginRightPercent="0%"
        app:layout_marginTopPercent="6.5%"
        app:layout_widthPercent="10%"/>

    <ImageButton
        android:id="@+id/image_button_star_on_off"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@id/image_view_divider"
        android:layout_toRightOf="@id/image_button_play"
        android:background="@drawable/sel_focus"
        android:focusable="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_star_on"
        app:layout_heightPercent="10%"
        app:layout_marginBottomPercent="1%"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="0%"
        app:layout_marginTopPercent="4%"
        app:layout_widthPercent="6%"/>

    <TextView
        android:id="@+id/text_view_star_on"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@id/image_view_divider"
        android:layout_below="@id/text_view_content"
        android:layout_toRightOf="@id/image_button_star_on_off"
        android:text="@string/detail_view_star_on_text"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_heightPercent="5%"
        app:layout_marginBottomPercent="1%"
        app:layout_marginLeftPercent="1%"
        app:layout_marginRightPercent="0%"
        app:layout_marginTopPercent="6.5%"
        app:layout_widthPercent="10%"/>

</android.support.percent.PercentRelativeLayout>